fix whitespace on scrolling in mobile

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,9 +1,7 @@
 #root {
 	position: fixed;
-	top: 0;
-	left: 0;
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	background: #030712 none center center no-repeat fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
