--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,11 @@
 	padding: 0;
 }
 
-html,
-body {
+html {
 	height: 100%;
+}
+
+body {
+	height: 100vh;
+	overflow: auto;
 }
